[gd_scene load_steps=37 format=1]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Textures/tile1.png" type="Texture" id=2]
[ext_resource path="res://Textures/tile2.png" type="Texture" id=3]
[ext_resource path="res://Textures/tile3.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Room.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Vampire.gd" type="Script" id=6]
[ext_resource path="res://Textures/vampire.png" type="Texture" id=7]
[ext_resource path="res://Textures/hp_under.png" type="Texture" id=8]
[ext_resource path="res://Textures/hp_over.png" type="Texture" id=9]
[ext_resource path="res://Textures/hp_progress.png" type="Texture" id=10]
[ext_resource path="res://Textures/syringe_under.png" type="Texture" id=11]
[ext_resource path="res://Textures/syringe_over.png" type="Texture" id=12]
[ext_resource path="res://Textures/spd_progress.png" type="Texture" id=13]
[ext_resource path="res://Textures/charge_progress.png" type="Texture" id=14]
[ext_resource path="res://Textures/shot_progress.png" type="Texture" id=15]
[ext_resource path="res://Textures/button-shift.png" type="Texture" id=16]
[ext_resource path="res://Textures/button-shift2.png" type="Texture" id=17]
[ext_resource path="res://Textures/button-z.png" type="Texture" id=18]
[ext_resource path="res://Textures/button-z2.png" type="Texture" id=19]
[ext_resource path="res://Textures/button-x.png" type="Texture" id=20]
[ext_resource path="res://Textures/button-x2.png" type="Texture" id=21]
[ext_resource path="res://Textures/button-c.png" type="Texture" id=22]
[ext_resource path="res://Textures/button-c2.png" type="Texture" id=23]
[ext_resource path="res://Textures/Title.png" type="Texture" id=24]
[ext_resource path="res://Textures/newspaper-eve.png" type="Texture" id=25]
[ext_resource path="res://Textures/newspaper-mor.png" type="Texture" id=26]
[ext_resource path="res://SFXs/beep.wav" type="Sample" id=27]
[ext_resource path="res://SFXs/hit.wav" type="Sample" id=28]
[ext_resource path="res://SFXs/hurt.wav" type="Sample" id=29]
[ext_resource path="res://SFXs/suck.wav" type="Sample" id=30]

[sub_resource type="TileSet" id=1]

0/name = ""
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 0, 0 )
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shapes = [  ]
1/name = ""
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 0, 0 )
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shapes = [  ]
2/name = ""
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 0, 0 )
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shapes = [  ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 10.0
height = 20.0

[sub_resource type="Animation" id=3]

resource/name = "Title"
length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1, 2 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 400, 80 ), Vector2( 400, 100 ), Vector2( 400, 80 ) ]
}

[sub_resource type="Animation" id=4]

resource/name = "Anim"
length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.6 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 3.5, 3.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -1080.0, -720.0, -360.0, 0.0 ]
}

[sub_resource type="Animation" id=5]

resource/name = "Out"
length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.6 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 10, 10 ), Vector2( 3.5, 3.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:transform/rot")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -1080.0, -720.0, -360.0, 0.0 ]
}

[sub_resource type="SampleLibrary" id=6]

samples/beep = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 27 )
}
samples/hit = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 28 )
}
samples/hurt = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 29 )
}
samples/suck = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 30 )
}

[node name="Game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]

transform/scale = Vector2( 3, 3 )
mode = 0
tile_set = SubResource( 1 )
cell/size = Vector2( 14, 14 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 0, 1, 1, 1, 2, 1, 3, 1, 4, 1, 5, 1, 6, 1, 7, 1, 8, 1, 9, 2, 10, 2, 11, 1, 12, 1, 13, 1, 14, 1, 15, 1, 16, 1, 17, 1, 18, 1, 19, 1, 20, 1, 21, 1, 22, 1, 23, 1, 65536, 1, 65537, 0, 65538, 0, 65539, 0, 65540, 0, 65541, 0, 65542, 0, 65543, 0, 65544, 0, 65545, 2, 65546, 2, 65547, 0, 65548, 0, 65549, 0, 65550, 0, 65551, 0, 65552, 0, 65553, 0, 65554, 1, 65555, 1, 65556, 0, 65557, 0, 65558, 0, 65559, 0, 131072, 1, 131073, 0, 131074, 0, 131075, 0, 131076, 0, 131077, 0, 131078, 0, 131079, 0, 131080, 0, 131081, 2, 131082, 2, 131083, 0, 131084, 0, 131085, 0, 131086, 0, 131087, 0, 131088, 0, 131089, 0, 131090, 1, 131091, 1, 131092, 0, 131093, 0, 131094, 0, 131095, 0, 196608, 1, 196609, 0, 196610, 0, 196611, 0, 196612, 0, 196613, 0, 196614, 0, 196615, 0, 196616, 0, 196617, 2, 196618, 2, 196619, 0, 196620, 0, 196621, 0, 196622, 0, 196623, 0, 196624, 0, 196625, 0, 196626, 1, 196627, 1, 196628, 0, 196629, 0, 196630, 0, 196631, 0, 262144, 1, 262145, 0, 262146, 0, 262147, 0, 262148, 0, 262149, 0, 262150, 0, 262151, 0, 262152, 0, 262153, 2, 262154, 2, 262155, 0, 262156, 0, 262157, 0, 262158, 0, 262159, 0, 262160, 0, 262161, 0, 262162, 1, 262163, 1, 262164, 0, 262165, 0, 262166, 0, 262167, 0, 327680, 1, 327681, 0, 327682, 0, 327683, 0, 327684, 0, 327685, 0, 327686, 0, 327687, 0, 327688, 0, 327689, 2, 327690, 2, 327691, 0, 327692, 0, 327693, 0, 327694, 0, 327695, 0, 327696, 0, 327697, 0, 327698, 1, 327699, 1, 327700, 0, 327701, 0, 327702, 0, 327703, 0, 393216, 2, 393217, 2, 393218, 2, 393219, 2, 393220, 2, 393221, 2, 393222, 2, 393223, 2, 393224, 2, 393225, 2, 393226, 2, 393227, 2, 393228, 2, 393229, 2, 393230, 2, 393231, 2, 393232, 2, 393233, 2, 393234, 2, 393235, 2, 393236, 2, 393237, 2, 393238, 2, 393239, 2, 458752, 2, 458753, 2, 458754, 2, 458755, 2, 458756, 2, 458757, 2, 458758, 2, 458759, 2, 458760, 2, 458761, 2, 458762, 2, 458763, 2, 458764, 2, 458765, 2, 458766, 2, 458767, 2, 458768, 2, 458769, 2, 458770, 2, 458771, 2, 458772, 2, 458773, 2, 458774, 2, 458775, 2, 524288, 1, 524289, 0, 524290, 0, 524291, 0, 524292, 0, 524293, 0, 524294, 0, 524295, 0, 524296, 0, 524297, 2, 524298, 2, 524299, 0, 524300, 0, 524301, 0, 524302, 0, 524303, 0, 524304, 0, 524305, 0, 524306, 1, 524307, 1, 524308, 0, 524309, 0, 524310, 0, 524311, 0, 589824, 1, 589825, 0, 589826, 0, 589827, 0, 589828, 0, 589829, 0, 589830, 0, 589831, 0, 589832, 0, 589833, 2, 589834, 2, 589835, 0, 589836, 0, 589837, 0, 589838, 0, 589839, 0, 589840, 0, 589841, 0, 589842, 1, 589843, 1, 589844, 0, 589845, 0, 589846, 0, 589847, 0, 655360, 1, 655361, 0, 655362, 0, 655363, 0, 655364, 0, 655365, 0, 655366, 0, 655367, 0, 655368, 0, 655369, 2, 655370, 2, 655371, 0, 655372, 0, 655373, 0, 655374, 0, 655375, 0, 655376, 0, 655377, 0, 655378, 1, 655379, 1, 655380, 0, 655381, 0, 655382, 0, 655383, 0, 720896, 1, 720897, 0, 720898, 0, 720899, 0, 720900, 0, 720901, 0, 720902, 0, 720903, 0, 720904, 0, 720905, 2, 720906, 2, 720907, 0, 720908, 0, 720909, 0, 720910, 0, 720911, 0, 720912, 0, 720913, 0, 720914, 1, 720915, 1, 720916, 0, 720917, 0, 720918, 0, 720919, 0, 786432, 1, 786433, 0, 786434, 0, 786435, 0, 786436, 0, 786437, 0, 786438, 0, 786439, 0, 786440, 0, 786441, 2, 786442, 2, 786443, 0, 786444, 0, 786445, 0, 786446, 0, 786447, 0, 786448, 0, 786449, 0, 786450, 1, 786451, 1, 786452, 0, 786453, 0, 786454, 0, 786455, 0, 851968, 1, 851969, 0, 851970, 0, 851971, 0, 851972, 0, 851973, 0, 851974, 0, 851975, 0, 851976, 0, 851977, 2, 851978, 2, 851979, 0, 851980, 0, 851981, 0, 851982, 0, 851983, 0, 851984, 0, 851985, 0, 851986, 1, 851987, 1, 851988, 0, 851989, 0, 851990, 0, 851991, 0, 917504, 1, 917505, 1, 917506, 1, 917507, 1, 917508, 1, 917509, 1, 917510, 1, 917511, 1, 917512, 1, 917513, 2, 917514, 2, 917515, 1, 917516, 1, 917517, 1, 917518, 1, 917519, 1, 917520, 1, 917521, 1, 917522, 1, 917523, 1, 917524, 1, 917525, 1, 917526, 1, 917527, 1, 983040, 1, 983041, 1, 983042, 1, 983043, 1, 983044, 1, 983045, 1, 983046, 1, 983047, 1, 983048, 1, 983049, 2, 983050, 2, 983051, 1, 983052, 1, 983053, 1, 983054, 1, 983055, 1, 983056, 1, 983057, 1, 983058, 1, 983059, 1, 983060, 1, 983061, 1, 983062, 1, 983063, 1, 1048576, 0, 1048577, 0, 1048578, 0, 1048579, 0, 1048580, 0, 1048581, 0, 1048582, 0, 1048583, 0, 1048584, 0, 1048585, 2, 1048586, 2, 1048587, 0, 1048588, 0, 1048589, 0, 1048590, 0, 1048591, 0, 1048592, 0, 1048593, 0, 1048594, 1, 1048595, 1, 1048596, 0, 1048597, 0, 1048598, 0, 1048599, 0, 1114112, 0, 1114113, 0, 1114114, 0, 1114115, 0, 1114116, 0, 1114117, 0, 1114118, 0, 1114119, 0, 1114120, 0, 1114121, 2, 1114122, 2, 1114123, 0, 1114124, 0, 1114125, 0, 1114126, 0, 1114127, 0, 1114128, 0, 1114129, 0, 1114130, 1, 1114131, 1, 1114132, 0, 1114133, 0, 1114134, 0, 1114135, 0, 1179648, 0, 1179649, 0, 1179650, 0, 1179651, 0, 1179652, 0, 1179653, 0, 1179654, 0, 1179655, 0, 1179656, 0, 1179657, 2, 1179658, 2, 1179659, 0, 1179660, 0, 1179661, 0, 1179662, 0, 1179663, 0, 1179664, 0, 1179665, 0, 1179666, 1, 1179667, 1, 1179668, 0, 1179669, 0, 1179670, 0, 1179671, 0, 1245184, 0, 1245185, 0, 1245186, 0, 1245187, 0, 1245188, 0, 1245189, 0, 1245190, 0, 1245191, 0, 1245192, 0, 1245193, 2, 1245194, 2, 1245195, 0, 1245196, 0, 1245197, 0, 1245198, 0, 1245199, 0, 1245200, 0, 1245201, 0, 1245202, 1, 1245203, 1, 1245204, 0, 1245205, 0, 1245206, 0, 1245207, 0, 1310720, 0, 1310721, 0, 1310722, 0, 1310723, 0, 1310724, 0, 1310725, 0, 1310726, 0, 1310727, 0, 1310728, 0, 1310729, 2, 1310730, 2, 1310731, 0, 1310732, 0, 1310733, 0, 1310734, 0, 1310735, 0, 1310736, 0, 1310737, 0, 1310738, 1, 1310739, 1, 1310740, 0, 1310741, 0, 1310742, 0, 1310743, 0 )

[node name="Room" type="Area2D" parent="."]

input/pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 5 )

[node name="Vampire" type="KinematicBody2D" parent="."]

transform/pos = Vector2( 400, 300 )
input/pickable = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Vampire"]

transform/scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 7 )

[node name="Area2D" type="Area2D" parent="Vampire" groups=[
"char",
]]

editor/display_folded = true
transform/pos = Vector2( 0.0313432, -0.402941 )
transform/scale = Vector2( 0.62586, 1.0829 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 2.63077, 0, 0, 1.51824, -0.0375026, -1.01199 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="collision" type="CollisionShape2D" parent="Vampire/Area2D"]

transform/pos = Vector2( -0.0375026, -1.01199 )
transform/scale = Vector2( 2.63077, 1.51824 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Red_Effect" type="Tween" parent="Vampire"]

playback/process_mode = 0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="HUD" type="Control" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -1.0
margin/top = -1.0
margin/right = 39.0
margin/bottom = 39.0
__meta__ = {
"_edit_lock_": true
}

[node name="hp_prog" type="TextureProgress" parent="HUD"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 12.0
margin/top = 478.0
margin/right = 48.0
margin/bottom = 524.0
range/min = 0.0
range/max = 930.0
range/step = 1.0
range/page = 0.0
range/value = 70.0
range/exp_edit = false
range/rounded = false
texture/under = ExtResource( 8 )
texture/over = ExtResource( 9 )
texture/progress = ExtResource( 10 )
mode = 3
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="spd_prog" type="TextureProgress" parent="HUD"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 62.0
margin/top = 478.0
margin/right = 102.0
margin/bottom = 518.0
range/min = 0.0
range/max = 317.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
texture/under = ExtResource( 11 )
texture/over = ExtResource( 12 )
texture/progress = ExtResource( 13 )
mode = 3
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="chr_prog" type="TextureProgress" parent="HUD"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 97.0
margin/top = 478.0
margin/right = 137.0
margin/bottom = 518.0
range/min = 0.0
range/max = 317.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
texture/under = ExtResource( 11 )
texture/over = ExtResource( 12 )
texture/progress = ExtResource( 14 )
mode = 3
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="cap_prog" type="TextureProgress" parent="HUD"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 132.0
margin/top = 478.0
margin/right = 172.0
margin/bottom = 518.0
range/min = 0.0
range/max = 317.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
texture/under = ExtResource( 11 )
texture/over = ExtResource( 12 )
texture/progress = ExtResource( 15 )
mode = 3
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="hp_but" type="TextureButton" parent="HUD"]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 12.0
margin/top = 558.0
margin/right = 52.0
margin/bottom = 598.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 16 )
textures/pressed = ExtResource( 17 )
params/resize_mode = 0
params/scale = Vector2( 2, 2 )
params/stretch_mode = 0

[node name="spd_but" type="TextureButton" parent="HUD"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 62.0
margin/top = 559.0
margin/right = 102.0
margin/bottom = 599.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 18 )
textures/pressed = ExtResource( 19 )
params/resize_mode = 0
params/scale = Vector2( 3, 3 )
params/stretch_mode = 0

[node name="chr_but" type="TextureButton" parent="HUD"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 97.0
margin/top = 559.0
margin/right = 137.0
margin/bottom = 599.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 20 )
textures/pressed = ExtResource( 21 )
params/resize_mode = 0
params/scale = Vector2( 3, 3 )
params/stretch_mode = 0

[node name="cap_but" type="TextureButton" parent="HUD"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 132.0
margin/top = 559.0
margin/right = 172.0
margin/bottom = 599.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 22 )
textures/pressed = ExtResource( 23 )
params/resize_mode = 0
params/scale = Vector2( 3, 3 )
params/stretch_mode = 0

[node name="Score" type="Label" parent="HUD"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 45.0
margin/top = 6.0
margin/right = 207.0
margin/bottom = 89.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Score: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Titlework" type="Sprite" parent="."]

editor/display_folded = true
transform/pos = Vector2( 400, 100 )
transform/scale = Vector2( 5, 5 )
z/z = 3
texture = ExtResource( 24 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Titlework"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Title = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "Title"

[node name="Newspaper_Eve" type="Sprite" parent="."]

editor/display_folded = true
transform/pos = Vector2( 400, 380 )
transform/scale = Vector2( 3.5, 3.5 )
z/z = 1
texture = ExtResource( 25 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Newspaper_Eve"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Anim = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "Anim"

[node name="Newspaper_Mor" type="Sprite" parent="."]

editor/display_folded = true
visibility/opacity = 0.0
transform/pos = Vector2( 400, 380 )
transform/scale = Vector2( 3.5, 3.5 )
z/z = 2
texture = ExtResource( 26 )

[node name="AnimationPlay" type="AnimationPlayer" parent="Newspaper_Mor"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Out = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Tween" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 6 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="area_enter" from="Vampire/Area2D" to="Vampire" method="_on_Area2D_area_enter"]

[connection signal="tween_complete" from="Tween" to="." method="_on_Tween_tween_complete"]


